App working with external non-dockerized api

--- a/pseudo_app/Dockerfile
+++ b/pseudo_app/Dockerfile
@@ -1,11 +1,10 @@
 FROM continuumio/miniconda3
 
-WORKDIR usr/src/flask_app
-
+WORKDIR usr/src/pseudo_app
 
 ADD environment.yml environment.yml
 
 RUN conda env create -f environment.yml
-ENV PATH /opt/conda/envs/flair_pseudo_api/bin:$PATH
-RUN /bin/bash -c "source activate flair_pseudo_api"
+ENV PATH /opt/conda/envs/dash_pseudo_app/bin:$PATH
+RUN /bin/bash -c "source activate dash_pseudo_app"
 COPY . .
