--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -4,7 +4,7 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://flask_app:8000;
+        proxy_pass http://pseudo_app:8050;
 
         # Do not change this
         proxy_set_header Host $host;
