--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3'
 
 services:
 
-#  pseudo_api:
-#    container_name: pseudo_api
-#    restart: always
-#    build: https://github.com/psorianom/pseudo_api.git#:pseudo_api
-#    ports:
-#      - "8000:8000"
-#    command: gunicorn -w 3 --timeout 90 -b 0.0.0.0:8000 wsgi:server
+  pseudo_api:
+    container_name: pseudo_api
+    restart: always
+    build: https://github.com/psorianom/pseudo_api.git#:pseudo_api
+    ports:
+      - "8000"
+    volumes:
+     - ${PSEUDO_MODEL_PATH}:/usr/src/pseudo_api/model/best-model.pt
+    command: gunicorn -w 2 --timeout 90 -b 0.0.0.0:8000 wsgi:server
 
 
   pseudo_app:
@@ -16,12 +18,12 @@ services:
     restart: always
     build: ./pseudo_app
     ports:
-      - "8050:8050"
+      - "8050"
     environment:
-      - PSEUDO_REST_API_URL=http://0.0.0.0:8000/pseudonymize
-    command: gunicorn -w 3 --timeout 90 -b 0.0.0.0:8050 app:server
-#    depends_on:
-#      - pseudo_api
+      - PSEUDO_REST_API_URL=${PSEUDO_REST_API_URL}
+    command: gunicorn -w 1 --timeout 90 -b 0.0.0.0:8050 app:server
+    depends_on:
+      - pseudo_api
 
   nginx:
     container_name: nginx
@@ -30,5 +32,5 @@ services:
     ports:
       - "80:80"
     depends_on:
-#      - pseudo_api
+      - pseudo_api
       - pseudo_app
