--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -6,15 +6,22 @@ server {
     location / {
         proxy_pass http://pseudo_app:8050;
 
-        # Do not change this
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /static {
-        rewrite ^/static(.*) /$1 break;
-        root /static;
+    location /api {
+        rewrite ^/api(.*) $1 break;
+        proxy_pass http://pseudo_api:8000;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+
+
+
 }
 
