--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
+    location /pseudo/ {
         proxy_pass http://pseudo_app:8050;
 
         proxy_set_header Host $host;
@@ -11,8 +11,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /api {
-        rewrite ^/api(.*) $1 break;
+    location /pseudo/api {
+        rewrite ^/pseudo/api(.*) $1 break;
         proxy_pass http://pseudo_api:8000;
 
         proxy_set_header Host $host;
