added nginx request per minute controls

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,5 +49,11 @@ http {
 
     # Include additional parameters for virtual host(s)/server(s)
     include /etc/nginx/conf.d/*.conf;
+
+    # limit the request rate
+    #
+    limit_req_zone $binary_remote_addr zone=app:10m rate=80r/m;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=8r/m;
+
 }
 
