--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -1,9 +1,10 @@
 server {
-
+    client_max_body_size 200K;
     listen 80;
     server_name localhost;
 
     location /pseudo/ {
+        limit_req zone=app burst=5;
         proxy_pass http://pseudo_app:8050;
 
         proxy_set_header Host $host;
@@ -12,6 +13,7 @@ server {
     }
 
     location /pseudo/api {
+        limit_req zone=api burst=5;
         rewrite ^/pseudo/api(.*) $1 break;
         proxy_pass http://pseudo_api:8000;
 
