install only antiword

--- a/pseudo_app/Dockerfile
+++ b/pseudo_app/Dockerfile
@@ -1,8 +1,7 @@
 FROM continuumio/miniconda3
 
 WORKDIR usr/src/pseudo_app
-RUN apt-get update && apt-get install python-dev libxml2-dev libxslt1-dev antiword unrtf poppler-utils pstotext tesseract-ocr \
-flac ffmpeg lame libmad0 libsox-fmt-mp3 sox libjpeg-dev swig
+RUN apt-get update && apt-get install antiword
 ADD environment.yml environment.yml
 
 RUN conda env create -f environment.yml
