move the db outside with volumes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PSEUDO_MODEL_PATH=/home/pavel/code/pseudo_api/pseudo_api/model/best-model.pt
 PSEUDO_REST_API_URL=http://pseudo_api:8000/
+PSEUDO_API_DB_PATH=/home/pavel/code/pseudo_api/pseudo_api/api_stats.sqlite
