--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,12 @@ services:
   pseudo_api:
     container_name: pseudo_api
     restart: always
-    build: https://github.com/psorianom/pseudo_api.git#:pseudo_api
+    build: https://github.com/etalab-ia/pseudo_api.git#:pseudo_api
     ports:
       - "8000"
     volumes:
      - ${PSEUDO_MODEL_PATH}:/usr/src/pseudo_api/model/best-model.pt
+     - ${PSEUDO_API_DB_PATH}:/usr/src/pseudo_api/api_stats.sqlite
     command: gunicorn -w 2 --timeout 90 -b 0.0.0.0:8000 wsgi:server
 
 
